--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,141 @@
-html{font-family:adobe-caslon-pro,Adobe Caslon Pro,Times,Times New Roman,serif;font-weight:400;letter-spacing:0}
+@font-face {
+  font-family: "Adobe Caslon Pro";
+  src: url("../src/CaslonPro/ACaslonPro-Semibold.eot");
+  src: local("Adobe Caslon Pro Semibold"), local("ACaslonPro-Semibold"),
+    url("../src/CaslonPro/ACaslonPro-Semibold.eot?#iefix")
+      format("embedded-opentype"),
+    url("../src/CaslonPro/ACaslonPro-Semibold.woff") format("woff"),
+    url("../src/CaslonPro/ACaslonPro-Semibold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Adobe Caslon Pro";
+  src: url("../src/CaslonPro/ACaslonPro-SemiboldItalic.eot");
+  src: local("Adobe Caslon Pro Semibold Italic"),
+    local("ACaslonPro-SemiboldItalic"),
+    url("../src/CaslonPro/ACaslonPro-SemiboldItalic.eot?#iefix")
+      format("embedded-opentype"),
+    url("../src/CaslonPro/ACaslonPro-SemiboldItalic.woff") format("woff"),
+    url("../src/CaslonPro/ACaslonPro-SemiboldItalic.ttf") format("truetype");
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Adobe Caslon Pro";
+  src: url("../src/CaslonPro/ACaslonPro-Bold.eot");
+  src: local("Adobe Caslon Pro Bold"), local("ACaslonPro-Bold"),
+    url("../src/CaslonPro/ACaslonPro-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("../src/CaslonPro/ACaslonPro-Bold.woff") format("woff"),
+    url("../src/CaslonPro/ACaslonPro-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Adobe Caslon Pro";
+  src: url("../src/CaslonPro/ACaslonPro-Regular.eot");
+  src: local("Adobe Caslon Pro Regular"), local("ACaslonPro-Regular"),
+    url("../src/CaslonPro/ACaslonPro-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("../src/CaslonPro/ACaslonPro-Regular.woff") format("woff"),
+    url("../src/CaslonPro/ACaslonPro-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Adobe Caslon Pro";
+  src: url("../src/CaslonPro/ACaslonPro-Italic.eot");
+  src: local("Adobe Caslon Pro Italic"), local("ACaslonPro-Italic"),
+    url("../src/CaslonPro/ACaslonPro-Italic.eot?#iefix")
+      format("embedded-opentype"),
+    url("../src/CaslonPro/ACaslonPro-Italic.woff") format("woff"),
+    url("../src/CaslonPro/ACaslonPro-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Adobe Caslon Pro";
+  src: url("../src/CaslonPro/ACaslonPro-BoldItalic.eot");
+  src: local("Adobe Caslon Pro Bold Italic"), local("ACaslonPro-BoldItalic"),
+    url("../src/CaslonPro/ACaslonPro-BoldItalic.eot?#iefix")
+      format("embedded-opentype"),
+    url("../src/CaslonPro/ACaslonPro-BoldItalic.woff") format("woff"),
+    url("../src/CaslonPro/ACaslonPro-BoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+html {
+  font-family: Adobe Caslon Pro, Times, Times New Roman, serif;
+  font-weight: 400;
+  letter-spacing: 0;
+}
+
+#root,.container{
+  height: 100vh;
+  height: -moz-available; /* WebKit-based browsers will ignore this. */
+  height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  height: stretch;
+}
+
+.splash {
+  height: 100vh;
+  height: -moz-available; /* WebKit-based browsers will ignore this. */
+  height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  height: stretch;
+  align-items: center;
+  align-content: center;
+  display:flex;
+  background: -webkit-linear-gradient(60deg, #fcc, #cff, #cfc) fixed;
+  background: linear-gradient(60deg, #fcc, #cff, #cfc) fixed;
+}
+
+.imy {
+  cursor: default;
+  margin: 0 auto;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16vw;
+  font-weight: bold;
+  line-height:normal;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-color: #ccc;  
+}
+
+@-webkit-keyframes one {
+  0% {
+    background-position: 0% 100%;    }
+  50% {
+    background-position: 100% 0%;    }
+  100% {
+    background-position: 0% 100%;  }
+}
+
+@keyframes one {
+  0% {
+    background-position: 0% 100%;    }
+  50% {
+    background-position: 100% 0%;    }
+  100% {
+    background-position: 0% 100%;  }
+}
+
+.content {
+margin: 50px auto;
+max-width: 1200px;
+}
+
+.about {
+  background: #fa0;
+  color: #fff;
+  padding: 25px;
+  font-size: 1.4em;
+  line-height: 1em;
+}
