--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@ max-width: 1200px;
 }
 
 .about {
-  background: #fa0;
+  background: #f90;
   color: #fff;
   padding: 25px;
   font-size: 1.4em;
