--- a/src/App.css
+++ b/src/App.css
@@ -145,10 +145,20 @@ html {
 
 .main {
   margin: 50px;
+  height: 100vh;
+  height: -moz-available;
+  /* WebKit-based browsers will ignore this. */
+  height: -webkit-fill-available;
+  /* Mozilla-based browsers will ignore this. */
+  height: stretch;
+  align-items: center;
+  align-content: center;
+  display: flex;
 }
 
 .content {
   margin: auto;
+  width: 100%;
   max-width: 1200px;
 }
 
@@ -166,8 +176,9 @@ html {
   color: #fff;
   font-size: 1.4em;
   line-height: 1em;
-  margin:25px auto;
+  margin: auto;
   text-align:center;
+  margin-bottom:25px;
 }
 
 .links p {
@@ -196,7 +207,7 @@ html {
   width: 100%;
 }
 
-.ui.form .field > label {
+.ui.form .field > label, .link a {
   color: rgba(0, 0, 0, 0.87);
 }
 
@@ -210,8 +221,8 @@ html {
   .wrapper {
     flex-direction: column;
   }
-  .nav {
-    position: inline;
+  .main {
+    height: auto;
   }
 }
 
