--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@
   font-size: 16vw;
   font-weight: bold;
   line-height: normal;
-  color: #e0e0e0;
+  color: #ccc;
 }
 
 @-webkit-keyframes one {
