--- a/src/App.css
+++ b/src/App.css
@@ -92,22 +92,25 @@
 @font-face {
   font-family: "Helvetica";
   src: url("../src/Helvetica/helvetica-webfont.eot");
-  src: url("../src/Helvetica/helvetica-webfont.eot?#iefix") format("embedded-opentype"),
+  src: url("../src/Helvetica/helvetica-webfont.eot?#iefix")
+      format("embedded-opentype"),
     url("../src/Helvetica/helvetica-webfont.woff") format("woff"),
     url("../src/Helvetica/helvetica-webfont.ttf") format("truetype"),
-    url("../src/Helvetica/helvetica-webfont.svg#helveticaregular") format("svg");
+    url("../src/Helvetica/helvetica-webfont.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Helvetica Bold";
+  font-family: "Helvetica";
   src: url("../src/Helvetica/helveticabold-webfont.eot");
-  src: url("../src/Helvetica/helveticabold-webfont.eot?#iefix") format("embedded-opentype"),
+  src: url("../src/Helvetica/helveticabold-webfont.eot?#iefix")
+      format("embedded-opentype"),
     url("../src/Helvetica/helveticabold-webfont.woff") format("woff"),
     url("../src/Helvetica/helveticabold-webfont.ttf") format("truetype"),
-    url("../src/Helvetica/helveticabold-webfont.svg#helveticabold") format("svg");
-  font-weight: normal;
+    url("../src/Helvetica/helveticabold-webfont.svg")
+      format("svg");
+  font-weight: bold;
   font-style: normal;
 }
 
@@ -157,7 +160,8 @@
 .imy {
   cursor: default;
   margin: 0 auto;
-  font-family: "Helvetica Bold", sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
   font-size: 16vw;
   line-height: normal;
   color: #ccc;
@@ -226,8 +230,7 @@
 }
 
 .links {
-  font-family: "Helvetica Bold", Arial, sans-serif;
-  font-weight: bold;
+  font-family: Helvetica, Arial, sans-serif;
   color: #fff;
   font-size: 1.4em;
   line-height: 1em;
@@ -244,6 +247,7 @@
 .links a {
   word-spacing: normal;
   white-space: nowrap;
+  font-weight: bold;
 }
 
 .links a:hover {
