--- a/src/App.css
+++ b/src/App.css
@@ -157,8 +157,8 @@
 .imy {
   cursor: default;
   margin: 0 auto;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
   font-size: 16vw;
   line-height: normal;
   color: #ccc;
